fixed dashboard styling and made it responsive on mobile and tablets

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -69,7 +69,4 @@ h1, h5 {
   .container, .container-fluid {
     padding: 0;
   }
-  main {
-    font-size: 12px;
-  }
 }
